--- a/Documents/Thesis/BiB_files/references.bib
+++ b/Documents/Thesis/BiB_files/references.bib
@@ -72,3 +72,8 @@
 	title={"ECR"},
 	url={https://docs.aws.amazon.com/AmazonECR/latest/userguide/what-is-ecr.html}
 }
+
+@misc{aws-dynamodb,
+	title={"DynamoDB"},
+	url={https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Introduction.html}
+}
