--- a/Documents/Thesis/TeX_files/chapter02.tex
+++ b/Documents/Thesis/TeX_files/chapter02.tex
@@ -15,7 +15,7 @@ The workflow is predefined which makes it organized and coherent. Data is fetche
 
 The web application offers two services:
 \begin{itemize}
-	\item Push data into cloud - users have to create their own packed software application that streams any type of data into a broker. The broker supports 5 types of protocols ([TODO]more information in chapter ...). Data is organized into topics and queues:
+	\item Push data into cloud - users have to create their own packed software application that streams any type of data into a broker. The broker supports 5 types of protocols. Data is organized into topics and queues:
 	\begin{itemize}
 		\item Topics - are used to handle real time messages
 		\item Queues - are used for historical data. Messages are stored and retrieved later
@@ -56,7 +56,7 @@ The application itself was intended to be very fast and responsive to user inter
 
 \subsection{Security}
 \label{chap:02:01:03}
-In my views security is pivotal for any well designed and successful application. Users are guaranteed to not have exposed credentials or any kind of sensitive data. If there is a concern of information leakage, this matter is more deeply discussed in [TO DO Chapter ... ].  
+In my views security is pivotal for any well designed and successful application. Users are guaranteed to not have exposed credentials or any kind of sensitive data. If there is a concern of information leakage, this matter is more deeply discussed in \autoref{chap:04}.  
 
 \subsection{User's Guide}
 \label{chap:02:01:04}
