--- a/Documents/Thesis/TeX_files/chapter06.tex
+++ b/Documents/Thesis/TeX_files/chapter06.tex
@@ -1,2 +1,14 @@
 \chapter{Conclusions}
 \label{chap:06}
+
+Stream Analysis Web Application provides a useful framework to plot data that can come from various sources. Its user interface is easy to understand and provides the users with all the necessary functionalities to upload their application in the cloud.\\
+
+One of the main advantages of the Web Application is that it's hosted in the cloud, allowing users to benefit from it regardless of their environment as long as they have internet connection.\\
+
+New features can be added to the data visualizing part of the application. For example there could be more sophisticated charts that enable users to analyze and get insights from the data.\\
+
+On a personal note I have achieved what I proposed for myself. To learn the AWS API and to be able to use it on a decent number of services. This application uses to most known and important cloud services starting from database, virtual machine, messaging systems and so on.\\
+
+On the other hand I solidified my knowledge on two of the most important frameworks used currently: ASP .NET Core and Angular.\\
+
+Finally I have also made an introduction to the world of containerized applications through Docker.
