--- a/Documents/Thesis/BiB_files/references.bib
+++ b/Documents/Thesis/BiB_files/references.bib
@@ -1,3 +1,24 @@
+@book{asp-core-book1,
+	title = {Programming ASP.NET Core},
+	author = {Dino Esposito},
+	year = {2018},
+	publisher = {Microsoft Press},
+}
+
+@book{angular-book1,
+	title = {Pro Angular},
+	author = {Adam Freeman},
+	year = {2017},
+	publisher = {Apress},
+}
+
+@book{aws-book1,
+	title = {Introduction to AWS (Amazon Web Services) Beginner's Guide Book},
+	author = {George Sammons},
+	year = {2016},
+	publisher = {CreateSpace Independent},
+}
+
 @misc{aws-overview,
 	title={"Amazon Web Services"},
 	url={https://en.wikipedia.org/wiki/Amazon_Web_Services}
