--- a/Documents/Thesis/TeX_files/chapter03.tex
+++ b/Documents/Thesis/TeX_files/chapter03.tex
@@ -1,4 +1,4 @@
-\chapter{Framework architecture}
+\chapter{Framework's architecture}
 \label{chap:03}
 
 At the highest macro level the framework can be put into perspective as shown in figure \ref{fig:architecture1}. 
@@ -22,11 +22,11 @@ The roles and components are:
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{./images/architecture/framework.png}
-	\caption{Framework main components}
+	\caption{Framework's main components}
 	\label{fig:architecture2}
 \end{figure}
 
-Figure \ref{fig:architecture2} zooms in the Framework component. The two blocks are as follows:
+Figure \ref{fig:architecture2} zooms in the Framework components. The two blocks are as follows:
 \begin{itemize}
 	\item Uploading image and running containers - the data acquisition user after wrapping his fetching data application can use this side of the web application to upload and run it. The steps of achieving this goal is further discussed in \autoref{chap:04}.
 	\item Visualizing container data - this side of the framework is a tool which can be used to select plots filled with data coming from containers. Selection and usage of these plots is discussed in depth at \autoref{chap:04}.
