--- a/Documents/Thesis/TeX_files/chapter06.tex
+++ b/Documents/Thesis/TeX_files/chapter06.tex
@@ -3,7 +3,7 @@
 
 Stream Analysis Web Application provides a useful framework to plot data that can come from various sources. Its user interface is easy to understand and provides the users with all the necessary functionalities to upload their application in the cloud.\\
 
-One of the main advantages of the Web Application is that it's hosted in the cloud, allowing users to benefit from it regardless of their environment as long as they have internet connection.\\
+One of the main advantages of the Web Application is that it is hosted in the cloud, allowing users to benefit from it regardless of their environment as long as they have internet connection.\\
 
 New features can be added to the data visualizing part of the application. For example there could be more sophisticated charts that enable users to analyze and get insights from the data.\\
 
